--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <div class="hero">
     <div class="container">
       <!-- <img src="./img/emmaimage.png" alt="Sample Img"> -->
+      <!-- <div class="row"> -->
       <h1> My name is Aki! </h1>
-
+      <!-- </div> -->
       <div id="navbar">
         <div class="row">
           <div class="links">
@@ -39,7 +40,7 @@
             <p> I am a double Information Science and Japanese major at the University of Maryland, College Park. I'm interested in UI/UX Design, art, and translating Japanese manga. I'm currently learning how to cook and love trying different foods. </p>
           </div>
           <div class="column-large">
-            <!-- <img src="./img/deku.jpg" alt="Sample Img"> -->
+            <img src="./img/aki.png" alt="aki">
           </div>
         </div>
     </section>
