--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div id="descrip">
-        <p> I've loved drawing ever since I was a child. Recently I have been using illustration software such as Clip Studio Paint to make comics and Adobe Illustrator for design work. </p>
+        <p> Founded in 1882, Waseda University is located in the heart of Tokyo, Japan (only about a 15 min train ride from Shinjuku)! Many famous and notable alumni have attended the university, such as figure skater Yuzuru Hanyu and author Haruki Murakami. During my stay, I stayed at the Waseda International Student House, a dorm for international students all around the world.</p>
       </div>
       <br>
       <div class="row">
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div id="descrip">
-        <p> Growing up half-Japanese, learning about my mother's culture and language was something I looked forward to everyday. I began attending Keisho Center, a language school located in Bethesda for Japanese heritage speakers, in elementary school until high school. I am currently pursuing a B.A Japanese major at the University of Maryland and have had the opportunity to have studied abroad at Waseda University in Tokyo.  </p>
+        <p>During my stay, I had the opportunity to travel to many different areas of Japan such as Hakone and Kusatsu. Japan is known for its vibrant seasons, so wherever and no matter what time of the year you decide to travel you will not be disappointed. My favorite way of traveling is by riding the Japanese bullet train, the shinkansen! </p>
       </div>
       <br>
       <div class="row">
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div id="descrip">
-        <p> Growing up half-Japanese, learning about my mother's culture and language was something I looked forward to everyday. I began attending Keisho Center, a language school located in Bethesda for Japanese heritage speakers, in elementary school until high school. I am currently pursuing a B.A Japanese major at the University of Maryland and have had the opportunity to have studied abroad at Waseda University in Tokyo.  </p>
+        <p> Some of my fondest memories of my study abroad are doing daily everyday activities, such as getting lunch from the convenience store with my friends or riding the train. Being able to immerse myself in such a different culture and environemnt than I was used to was both a scary and exciting experience. </p>
       </div>
 
       <div id="goback">
